--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Vikram-Gujar's - PortFolio</title>
+  <link rel="shortcut icon" href="/vikram-gujar/public/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+  integrity="sha512-MGUFGIYyPyy6RqxpfHt9BhcTB6PhfMvY3iDGr2Sc3T1xzLlTf+G7WJbR5DXIsjX5WoeRmi3Zvc9JDs3g2NntA=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
+
 </head>
 <body>
   <div id="root"></div>
