--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <title>Vikram-Gujar's - PortFolio</title>
-  <link rel="shortcut icon" href="/vikram-gujar/public/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
